third_party/rust/thiserror/v1/crate/tests/ui/missing-fmt.stderr
error: missing #[error("...")] display attribute
 --> tests/ui/missing-fmt.rs:7:5
  |
7 |     B(usize),
  |     ^^^^^^^^
